source/src/antlr/.antlr/PythonParser.java
// Generated from c:/Users/DELL/python_flask_compiler/source/src/antlr/PythonParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PythonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LPAR=1, LSQB=2, LBRACE=3, RPAR=4, RSQB=5, RBRACE=6, DOT=7, COLON=8, COMMA=9, 
		SEMI=10, PLUS=11, MINUS=12, STAR=13, SLASH=14, VBAR=15, AMPER=16, LESS=17, 
		GREATER=18, EQUAL=19, PERCENT=20, EQEQUAL=21, NOTEQUAL=22, LESSEQUAL=23, 
		GREATEREQUAL=24, CIRCUMFLEX=25, DOUBLESTAR=26, PLUSEQUAL=27, MINEQUAL=28, 
		STAREQUAL=29, SLASHEQUAL=30, PERCENTEQUAL=31, CIRCUMFLEXEQUAL=32, ELLIPSIS=33, 
		EXCLAMATION=34, RARROW=35, DOUBLESTAREQUAL=36, AT=37, IMPORT=38, PASS=39, 
		NONE=40, BREAK=41, EXCEPT=42, IN=43, RAISE=44, CLASS=45, FINALLY=46, IS=47, 
		RETURN=48, AND=49, CONTINUE=50, FOR=51, TRY=52, AS=53, DEF=54, FROM=55, 
		WHILE=56, GLOBAL=57, NOT=58, OR=59, ELSE=60, ELIF=61, IF=62, WITH=63, 
		NEWLINE=64, INDENT=65, DEDENT=66, WS=67, COMMENT=68, MULTI_LINE_COMMENT=69, 
		INT=70, FLOAT=71, EXPLICIT_LINE_JOINING=72, F_STRING=73, STRING=74, BOOLEAN=75, 
		FALSE=76, TRUE=77, KEYWORD_CASE=78, NAME=79;
	public static final int
		RULE_application = 0, RULE_statements = 1, RULE_statement = 2, RULE_simple_stmt = 3, 
		RULE_small_stmt = 4, RULE_compound_stmt = 5, RULE_assignment = 6, RULE_augmented_assignment = 7, 
		RULE_augmented_assignment_operator = 8, RULE_target = 9, RULE_target_atom = 10, 
		RULE_target_postfix = 11, RULE_target_list = 12, RULE_typed_assignment = 13, 
		RULE_expr = 14, RULE_tuple_expr = 15, RULE_conditional_expr = 16, RULE_or_expr = 17, 
		RULE_and_expr = 18, RULE_not_expr = 19, RULE_comparison = 20, RULE_arithmetic_expr = 21, 
		RULE_xor_expr = 22, RULE_addition_expr = 23, RULE_multiplication_expr = 24, 
		RULE_unary_expr = 25, RULE_power_expr = 26, RULE_primary = 27, RULE_unary_op = 28, 
		RULE_postfix = 29, RULE_call = 30, RULE_subscription = 31, RULE_attribute_ref = 32, 
		RULE_atom = 33, RULE_literal = 34, RULE_strings = 35, RULE_enclosure = 36, 
		RULE_list_literal = 37, RULE_dict_literal = 38, RULE_dict_items = 39, 
		RULE_dict_item = 40, RULE_set_literal = 41, RULE_set_items = 42, RULE_arguments_list = 43, 
		RULE_args_argument = 44, RULE_kwargs_argument = 45, RULE_identifier_equal_expr_argument = 46, 
		RULE_if_stmt = 47, RULE_comparision_operator = 48, RULE_for_stmt = 49, 
		RULE_while_stmt = 50, RULE_func_def = 51, RULE_parameters_list = 52, RULE_args_kwargs_parameters_list = 53, 
		RULE_args_parameter = 54, RULE_kwargs_parameter = 55, RULE_default_parameter = 56, 
		RULE_non_default_parameter = 57, RULE_decorators = 58, RULE_decorator = 59, 
		RULE_decorator_expression = 60, RULE_dotted_name = 61, RULE_class_def = 62, 
		RULE_inheritance = 63, RULE_try_stmt = 64, RULE_else_clause = 65, RULE_finally_clause = 66, 
		RULE_except_clause = 67, RULE_except_expression = 68, RULE_exception_type = 69, 
		RULE_with_stmt = 70, RULE_with_item = 71, RULE_suite = 72, RULE_import_stmt = 73, 
		RULE_import_targets = 74, RULE_import_target = 75, RULE_import_from_target = 76, 
		RULE_return_stmt = 77, RULE_raise_stmt = 78, RULE_raise_expression = 79, 
		RULE_exception_instance = 80, RULE_global_stmt = 81, RULE_break_stmt = 82, 
		RULE_pass_stmt = 83, RULE_continue_stmt = 84, RULE_number = 85, RULE_identifier = 86;
	private static String[] makeRuleNames() {
		return new String[] {
			"application", "statements", "statement", "simple_stmt", "small_stmt", 
			"compound_stmt", "assignment", "augmented_assignment", "augmented_assignment_operator", 
			"target", "target_atom", "target_postfix", "target_list", "typed_assignment", 
			"expr", "tuple_expr", "conditional_expr", "or_expr", "and_expr", "not_expr", 
			"comparison", "arithmetic_expr", "xor_expr", "addition_expr", "multiplication_expr", 
			"unary_expr", "power_expr", "primary", "unary_op", "postfix", "call", 
			"subscription", "attribute_ref", "atom", "literal", "strings", "enclosure", 
			"list_literal", "dict_literal", "dict_items", "dict_item", "set_literal", 
			"set_items", "arguments_list", "args_argument", "kwargs_argument", "identifier_equal_expr_argument", 
			"if_stmt", "comparision_operator", "for_stmt", "while_stmt", "func_def", 
			"parameters_list", "args_kwargs_parameters_list", "args_parameter", "kwargs_parameter", 
			"default_parameter", "non_default_parameter", "decorators", "decorator", 
			"decorator_expression", "dotted_name", "class_def", "inheritance", "try_stmt", 
			"else_clause", "finally_clause", "except_clause", "except_expression", 
			"exception_type", "with_stmt", "with_item", "suite", "import_stmt", "import_targets", 
			"import_target", "import_from_target", "return_stmt", "raise_stmt", "raise_expression", 
			"exception_instance", "global_stmt", "break_stmt", "pass_stmt", "continue_stmt", 
			"number", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "'['", "'{'", "')'", "']'", "'}'", "'.'", "':'", "','", 
			"';'", "'+'", "'-'", "'*'", "'/'", "'|'", "'&'", "'<'", "'>'", "'='", 
			"'%'", "'=='", "'!='", "'<='", "'>='", "'^'", "'**'", "'+='", "'-='", 
			"'*='", "'/='", "'%='", "'^='", "'...'", "'!'", "'->'", "'**='", "'@'", 
			"'import'", "'pass'", "'None'", "'break'", "'except'", "'in'", "'raise'", 
			"'class'", "'finally'", "'is'", "'return'", "'and'", "'continue'", "'for'", 
			"'try'", "'as'", "'def'", "'from'", "'while'", "'global'", "'not'", "'or'", 
			"'else'", "'elif'", "'if'", "'with'", null, "'<INDENT>'", "'<DEDENT>'", 
			null, null, null, null, null, "'\\'", null, null, null, "'False'", "'True'", 
			"'case'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LPAR", "LSQB", "LBRACE", "RPAR", "RSQB", "RBRACE", "DOT", "COLON", 
			"COMMA", "SEMI", "PLUS", "MINUS", "STAR", "SLASH", "VBAR", "AMPER", "LESS", 
			"GREATER", "EQUAL", "PERCENT", "EQEQUAL", "NOTEQUAL", "LESSEQUAL", "GREATEREQUAL", 
			"CIRCUMFLEX", "DOUBLESTAR", "PLUSEQUAL", "MINEQUAL", "STAREQUAL", "SLASHEQUAL", 
			"PERCENTEQUAL", "CIRCUMFLEXEQUAL", "ELLIPSIS", "EXCLAMATION", "RARROW", 
			"DOUBLESTAREQUAL", "AT", "IMPORT", "PASS", "NONE", "BREAK", "EXCEPT", 
			"IN", "RAISE", "CLASS", "FINALLY", "IS", "RETURN", "AND", "CONTINUE", 
			"FOR", "TRY", "AS", "DEF", "FROM", "WHILE", "GLOBAL", "NOT", "OR", "ELSE", 
			"ELIF", "IF", "WITH", "NEWLINE", "INDENT", "DEDENT", "WS", "COMMENT", 
			"MULTI_LINE_COMMENT", "INT", "FLOAT", "EXPLICIT_LINE_JOINING", "F_STRING", 
			"STRING", "BOOLEAN", "FALSE", "TRUE", "KEYWORD_CASE", "NAME"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PythonParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PythonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ApplicationContext extends ParserRuleContext {
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PythonParser.EOF, 0); }
		public TerminalNode NEWLINE() { return getToken(PythonParser.NEWLINE, 0); }
		public ApplicationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_application; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterApplication(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitApplication(this);
		}
	}

	public final ApplicationContext application() throws RecognitionException {
		ApplicationContext _localctx = new ApplicationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_application);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(174);
				match(NEWLINE);
				}
			}

			setState(177);
			statements();
			setState(178);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementsContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitStatements(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(180);
				statement();
				}
				}
				setState(183); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & -4045019853143140338L) != 0) || ((((_la - 70)) & ~0x3f) == 0 && ((1L << (_la - 70)) & 571L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Simple_stmtContext simple_stmt() {
			return getRuleContext(Simple_stmtContext.class,0);
		}
		public Compound_stmtContext compound_stmt() {
			return getRuleContext(Compound_stmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(187);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LPAR:
			case LSQB:
			case LBRACE:
			case PLUS:
			case MINUS:
			case IMPORT:
			case PASS:
			case NONE:
			case BREAK:
			case RAISE:
			case RETURN:
			case CONTINUE:
			case FROM:
			case GLOBAL:
			case NOT:
			case INT:
			case FLOAT:
			case F_STRING:
			case STRING:
			case BOOLEAN:
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(185);
				simple_stmt();
				}
				break;
			case AT:
			case CLASS:
			case FOR:
			case TRY:
			case DEF:
			case WHILE:
			case IF:
			case WITH:
				enterOuterAlt(_localctx, 2);
				{
				setState(186);
				compound_stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Simple_stmtContext extends ParserRuleContext {
		public List<Small_stmtContext> small_stmt() {
			return getRuleContexts(Small_stmtContext.class);
		}
		public Small_stmtContext small_stmt(int i) {
			return getRuleContext(Small_stmtContext.class,i);
		}
		public TerminalNode NEWLINE() { return getToken(PythonParser.NEWLINE, 0); }
		public List<TerminalNode> SEMI() { return getTokens(PythonParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(PythonParser.SEMI, i);
		}
		public Simple_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterSimple_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitSimple_stmt(this);
		}
	}

	public final Simple_stmtContext simple_stmt() throws RecognitionException {
		Simple_stmtContext _localctx = new Simple_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_simple_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189);
			small_stmt();
			setState(194);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMI) {
				{
				{
				setState(190);
				match(SEMI);
				setState(191);
				small_stmt();
				}
				}
				setState(196);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(197);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Small_stmtContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public Augmented_assignmentContext augmented_assignment() {
			return getRuleContext(Augmented_assignmentContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Return_stmtContext return_stmt() {
			return getRuleContext(Return_stmtContext.class,0);
		}
		public Raise_stmtContext raise_stmt() {
			return getRuleContext(Raise_stmtContext.class,0);
		}
		public Import_stmtContext import_stmt() {
			return getRuleContext(Import_stmtContext.class,0);
		}
		public Global_stmtContext global_stmt() {
			return getRuleContext(Global_stmtContext.class,0);
		}
		public Break_stmtContext break_stmt() {
			return getRuleContext(Break_stmtContext.class,0);
		}
		public Pass_stmtContext pass_stmt() {
			return getRuleContext(Pass_stmtContext.class,0);
		}
		public Continue_stmtContext continue_stmt() {
			return getRuleContext(Continue_stmtContext.class,0);
		}
		public Small_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_small_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterSmall_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitSmall_stmt(this);
		}
	}

	public final Small_stmtContext small_stmt() throws RecognitionException {
		Small_stmtContext _localctx = new Small_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_small_stmt);
		try {
			setState(209);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(199);
				assignment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(200);
				augmented_assignment();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(201);
				expr();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(202);
				return_stmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(203);
				raise_stmt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(204);
				import_stmt();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(205);
				global_stmt();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(206);
				break_stmt();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(207);
				pass_stmt();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(208);
				continue_stmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Compound_stmtContext extends ParserRuleContext {
		public If_stmtContext if_stmt() {
			return getRuleContext(If_stmtContext.class,0);
		}
		public For_stmtContext for_stmt() {
			return getRuleContext(For_stmtContext.class,0);
		}
		public While_stmtContext while_stmt() {
			return getRuleContext(While_stmtContext.class,0);
		}
		public With_stmtContext with_stmt() {
			return getRuleContext(With_stmtContext.class,0);
		}
		public Try_stmtContext try_stmt() {
			return getRuleContext(Try_stmtContext.class,0);
		}
		public Func_defContext func_def() {
			return getRuleContext(Func_defContext.class,0);
		}
		public Class_defContext class_def() {
			return getRuleContext(Class_defContext.class,0);
		}
		public Compound_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compound_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).enterCompound_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonParserListener ) ((PythonParserListener)listener).exitCompound_stmt(this);
		}
	}

	public final Compound_stmtContext compound_stmt() throws RecognitionException {
		Compound_stmtContext _localctx = new Compound_stmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_compound_stmt);
		try {
			setState(218);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(211);
				if_stmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(212);
				for_stmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(213);
				while_stmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(214);
				with_stmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(215);
				try_stmt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(216);
				func_def();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(217);
				class_def();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
